[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "flow-steps-demo"
version = "0.1.0"
description = "Demo project showcasing step-based workflow execution using Flow"
requires-python = ">=3.10,<3.14"
dependencies = [
    "inspect-flow>=0.8",
    "inspect-scout",
    "openai",
    "anthropic",
    "xai_sdk",
]

[project.entry-points.inspect_ai]
flow_steps_demo = "flow_steps_demo._flow"
